@@ -21,7 +21,7 @@ admin-password = bar
 #status-password = foo
 #admin-deny-ip = ""
 #admin-allow-ip = ""
-wdp-interface-name = "*"
+#wdp-interface-name = "*"
 #log-file = "/tmp/bearerbox.log"
 #log-level = 0
 box-deny-ip = "*.*.*.*"
@@ -45,8 +45,8 @@ syslog-level = none
 
 group = ppg
 ppg-url = /cgi-bin/wap-push.cgi
-ppg-port = 8080
-#ppg-ssl-port = 8081
+ppg-port = 18080
+#ppg-ssl-port = 18081
 concurrent-pushes = 100
 trusted-pi = false
 users = 1024
@@ -74,7 +74,7 @@ ppg-password = bar
 group = smsc
 smsc = fake
 smsc-id = FAKE
-port = 10000
+port = 10010
 connect-allow-ip = 127.0.0.1
 
 # SMSBOX SETUP (a kludge!)
