@@ -66,7 +66,7 @@ box-allow-ip = "127.0.0.1"
 group = smsc
 smsc = fake
 smsc-id = FAKE
-port = 10000
+port = 20000
 connect-allow-ip = 127.0.0.1
 
 #---------------------------------------------
