@@ -27,7 +27,7 @@ admin-password = bar
 #status-password = foo
 #admin-deny-ip = ""
 #admin-allow-ip = ""
-wdp-interface-name = "*"
+wdp-interface-name = "127.0.0.1"
 #log-file = "/tmp/bearerbox.log"
 #log-level = 0
 box-deny-ip = "*.*.*.*"
@@ -44,5 +44,4 @@ bearerbox-host = 127.0.0.1
 #log-level = 0
 syslog-level = none
 #access-log = "/tmp/wapaccess.log"
-
 
